Added standard window and instantiated image class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,10 @@ set(SDL2_PATH "C:/Users/Aman's Laptop/Downloads/SDL2-devel-2.30.4-mingw/SDL2-2.3
 find_package(SDL2 REQUIRED)
 include_directories(${SDL2_INCLUDE_DIR})
 
-add_executable(RayTracing main.cpp)
+add_executable(RayTracing main.cpp
+        CApp.cpp
+        include/CApp.h
+        include/qbImage.h
+        qbImage.cpp)
 
 target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARY})
