added parent classes that theoretically should be able to implement ray marching logic

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,10 @@ add_executable(RayTracing main.cpp
         materials/simpleRefractive.cpp
         include/simpleRefractive.h
         objects/objCube.cpp
-        include/objCube.h)
+        include/objCube.h
+        raymarch/distFunc.cpp
+        include/distFunc.h
+        rayMarchBase.cpp
+        include/rayMarchBase.h)
 
 target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARY})
