added texture dependent normal maps, increased functionality for the normal child classes and a new example scene for the water texture

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,6 +79,10 @@ add_executable(RayTracing main.cpp
         normals/constantNorm.cpp
         include/constantNorm.h
         normals/BasicRoughNorm.cpp
-        include/BasicRoughNorm.h)
+        include/BasicRoughNorm.h
+        normals/textNorm.cpp
+        include/textNorm.h
+        textures/stone.cpp
+        include/stone.h)
 
 target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARY})
